force-app/main/default/objects/Features__c/Features__c.object-meta.xml
<CustomObject>
    <description>Created by: RE</description>
    <label>Feature</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Features Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>