force-app/main/default/objects/Features__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <description>Created by: RE</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assumptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>