force-app/main/default/objects/Features__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: RE</description>
    <label>Catalog Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Catalog Item must be of Type: Feature</errorMessage>
        <filterItems>
            <field>Catalog_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>Lookup</type>
</CustomField>