force-app/main/default/objects/Features__c/fields/Feature_Sets__c.field-meta.xml
<CustomField>
    <fullName>Feature_Sets__c</fullName>
    <description>Created by: RE</description>
    <label>Feature Sets</label>
    <referenceTo>Feature_Sets__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>